# TRACE

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  app.py  dev-setup.sh  docker-compose.yml  notes.ipynb  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: roadmap.md
docs/adr/: 001-postgres-over-graph-db.md
docs/superpowers/plans/: 2026-04-04-phase0-devops-foundation.md  2026-04-04-phase1-federal-register-connector.md  2026-04-05-async-concurrent-full-text-fetching.md  2026-04-06-docling-pdf-to-markdown.md  2026-04-09-embedding-pipeline.md  2026-04-13-streamlit-ui.md
docs/superpowers/specs/: 2026-04-05-async-concurrent-full-text-fetching-design.md  2026-04-05-multi-agency-connector-design.md  2026-04-06-docling-pdf-to-markdown-design.md  (+2 more)
migrations/: env.py
migrations/versions/: 20adb30d59a8_initial_schema.py  69d20430_add_fr_document_number_to_rules.py  c3f1a2b4_upsert_fr_document_number_unique.py  e370e6cdd283_add_embedding_ivfflat_index.py  e7f8a9b0_add_text_source_to_rules.py
src/trace_app/: __init__.py  config.py
tests/: conftest.py
tests/integration/: test_database.py  test_embed.py  test_frontend_search.py  test_ingest_ferc.py  test_ingest_fr.py
tests/unit/: test_agent_rag.py  test_config.py  test_database.py  test_embed_connector.py  test_embeddings_processing.py  test_federal_register.py  test_frontend_comparison.py  test_frontend_graph.py  test_frontend_search.py  test_ingest_storage.py  test_models.py  test_rules_processing.py
(+14 files in other folders)
