[project]
name = "trace"
version = "0.1.0"
description = "Tracking Regulatory Actors, Capture, and Erasure"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12,<3.14"

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pgvector>=0.3,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<27.0",
    "sentence-transformers>=3.0,<4.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "prefect>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "ty>=0.0.0a1",
    "pre-commit>=3.7,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_app"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 99
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.coverage.report]
fail_under = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests requiring database (deselect with '-m \"not integration\"')",
]

